--- a/pages/18904.html
+++ b/pages/18904.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      theta angle in nLab
+      Richard Healey in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      theta angle
+      Richard Healey
   </h1>
 
 
@@ -308,65 +308,44 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
-
-<p>In <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a> and specifically in its application to <a class='existingWikiWord' href='/nlab/show/QCD'>QCD</a>, the <em>theta angle</em> refers to the prefactor <math class='maruku-mathml' display='inline' id='mathml_e672559796cf255d8f5cda44b04bf648920f7c16_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>θ</mi></mrow><annotation encoding='application/x-tex'>\theta</annotation></semantics></math> in the expression of the <a class='existingWikiWord' href='/nlab/show/action+functional'>action functional</a> of the theory in front of the piece of <a class='existingWikiWord' href='/nlab/show/topological+Yang-Mills+theory'>topological Yang-Mills theory</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_e672559796cf255d8f5cda44b04bf648920f7c16_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∇</mo><mo>↦</mo><mfrac><mn>1</mn><mrow><msup><mi>g</mi> <mn>2</mn></msup></mrow></mfrac><msub><mo>∫</mo> <mi>X</mi></msub><msub><mi>F</mi> <mo>∇</mo></msub><mo>∧</mo><mo>⋆</mo><msub><mi>F</mi> <mo>∇</mo></msub><mspace width='thickmathspace'></mspace><mo>+</mo><mspace width='thickmathspace'></mspace><mi>i</mi><mi>θ</mi><msub><mo>∫</mo> <mi>X</mi></msub><msub><mi>F</mi> <mo>∇</mo></msub><mo>∧</mo><msub><mi>F</mi> <mo>∇</mo></msub></mrow><annotation encoding='application/x-tex'>
-  \nabla \mapsto
-  \frac{1}{g^2 }\int_X F_\nabla \wedge \star F_\nabla  \;+\; i \theta \int_X F_\nabla \wedge F_\nabla
-
-</annotation></semantics></math></div>
-<p>(see also at <em><a class='existingWikiWord' href='/nlab/show/S-duality'>S-duality</a></em> for more).</p>
-
-<p>In <a class='existingWikiWord' href='/nlab/show/phenomenology'>phenomenology</a> the theta angle has to be very close to an integer multiple of <math class='maruku-mathml' display='inline' id='mathml_e672559796cf255d8f5cda44b04bf648920f7c16_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>π</mi></mrow><annotation encoding='application/x-tex'>\pi</annotation></semantics></math>, see at <em><a class='existingWikiWord' href='/nlab/show/CP+violation'>CP problem</a></em>. That it is indeed <math class='maruku-mathml' display='inline' id='mathml_e672559796cf255d8f5cda44b04bf648920f7c16_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>θ</mi> <mi>QCD</mi></msub><mo>≃</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>\theta_{QCD}\simeq 0</annotation></semantics></math> instead of <math class='maruku-mathml' display='inline' id='mathml_e672559796cf255d8f5cda44b04bf648920f7c16_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>θ</mi> <mi>QCD</mi></msub><mo>≃</mo><mi>π</mi></mrow><annotation encoding='application/x-tex'>\theta_{QCD} \simeq \pi</annotation></semantics></math> that matches experiment is argued at the end of <a href='#CrewtherDiVecchiaVenezianoWitten79'>Crewther-DiVecchia-Veneziano-Witten 79</a>, <a href='http://www.physicsoverflow.org/23722/how-do-we-know-%24-theta_-mathrm-qcd-ne-pi%24'>PO discussion</a>.</p>
-
-<h2 id='related_concepts'>Related concepts</h2>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/theta+angle'>theta angle</a></li>
-</ul>
-
-<h2 id='references'>References</h2>
-
-<ul>
-<li id='CrewtherDiVecchiaVenezianoWitten79'>
-<p><a class='existingWikiWord' href='/nlab/show/Rodney+Crewther'>Rodney Crewther</a>, <a class='existingWikiWord' href='/nlab/show/Paolo+Di+Vecchia'>Paolo Di Vecchia</a>, <a class='existingWikiWord' href='/nlab/show/Gabriele+Veneziano'>Gabriele Veneziano</a>, <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Chiral estimate of the electric dipole moment of the neutron in quantum chromodynamics</em>, Phys. Lett. B 88 (1979) 123-127 (<a href='http://cds.cern.ch/record/133382'>CERN</a>). See also</p>
+    <ul>
+<li>
+<p><a href='http://www.u.arizona.edu/~rhealey/'>webpage I</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Davide+Gaiotto'>Davide Gaiotto</a>, <a class='existingWikiWord' href='/nlab/show/Anton+Kapustin'>Anton Kapustin</a>, <a class='existingWikiWord' href='/nlab/show/Zohar+Komargodski'>Zohar Komargodski</a>, <a class='existingWikiWord' href='/nlab/show/Nathan+Seiberg'>Nathan Seiberg</a>, <em>Theta, Time Reversal, and Temperature</em> (<a href='https://arxiv.org/abs/1703.00501'>arXiv:1703.00501</a>)</p>
+<p><a href='https://philosophy.arizona.edu/user/richard-healey'>webpage II</a></p>
 </li>
 </ul>
 
-<p>Discussion of a similar <math class='maruku-mathml' display='inline' id='mathml_e672559796cf255d8f5cda44b04bf648920f7c16_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>θ</mi></mrow><annotation encoding='application/x-tex'>\theta</annotation></semantics></math>-angle in a 3d field theory, via <a class='existingWikiWord' href='/nlab/show/extended+topological+quantum+field+theory'>extended TQFT</a> and <a class='existingWikiWord' href='/nlab/show/stable+homotopy+theory'>stable homotopy theory</a> is in</p>
+<p><a class='existingWikiWord' href='/nlab/show/philosophy+of+physics'>philosophy of physics</a></p>
+
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_d6fb146b9fd07ae4b6603a76d8978f518df5453d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li id='FreedKomargodskiSeiberg17'><a class='existingWikiWord' href='/nlab/show/Daniel+Freed'>Daniel Freed</a>, <a class='existingWikiWord' href='/nlab/show/Zohar+Komargodski'>Zohar Komargodski</a>, <a class='existingWikiWord' href='/nlab/show/Nathan+Seiberg'>Nathan Seiberg</a>, <em>The Sum Over Topological Sectors and <math class='maruku-mathml' display='inline' id='mathml_e672559796cf255d8f5cda44b04bf648920f7c16_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>θ</mi></mrow><annotation encoding='application/x-tex'>\theta</annotation></semantics></math> in the 2+1-Dimensional <math class='maruku-mathml' display='inline' id='mathml_e672559796cf255d8f5cda44b04bf648920f7c16_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℂ</mi><msup><mi>ℙ</mi> <mn>1</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{C}\mathbb{P}^1</annotation></semantics></math> <math class='maruku-mathml' display='inline' id='mathml_e672559796cf255d8f5cda44b04bf648920f7c16_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>σ</mi></mrow><annotation encoding='application/x-tex'>\sigma</annotation></semantics></math>-Model</em> (<a href='https://arxiv.org/abs/1707.05448'>arXiv:1707.05448</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/theta+vacuum'>theta vacuum</a></li>
 </ul>
 
-<p>
-</p>
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on January  3, 2018 16:14:41 
+  Created on January  3, 2018 16:14:09 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/theta+angle" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/theta+angle/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/theta+angle" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/theta+angle" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Richard+Healey" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/theta+angle" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Richard+Healey" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/theta+angle" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Richard+Healey" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/theta+angle" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Richard+Healey" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
